--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <!-- Header -->
@@ -9,25 +10,38 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/spotify_green">
+        android:padding="20dp"
+        android:paddingStart="5dp">
 
         <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/spotify_logo" />
+            android:id="@+id/img_setting"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/title"
+            android:src="@drawable/setting" />
+
+        <ImageView
+            android:id="@+id/img_notification"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="50dp"
+            android:layout_toStartOf="@+id/title"
+            android:src="@drawable/notification" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/logo"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginLeft="16dp"
+            android:text="@string/app_name"
+            android:textColor="@color/green"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
@@ -36,52 +50,62 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_marginBottom="0dp"/>
 
     <!-- Footer -->
-    <LinearLayout
-        android:id="@+id/footer"
+<!--    <LinearLayout-->
+<!--        android:id="@+id/footer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:padding="16dp"-->
+<!--        android:background="@android:color/white"-->
+<!--        android:visibility="gone">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/prev_button"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:src="@drawable/icons8_home_100px" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/play_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_play_button" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/next_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_next_button" />-->
+
+<!--        <SeekBar-->
+<!--            android:id="@+id/seekbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:max="100"-->
+<!--            android:progress="0"-->
+<!--            android:progressDrawable="@drawable/seekbar_progress"-->
+<!--            android:thumb="@drawable/seekbar_thumb" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/volume_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_volume_button" />-->
+
+<!--    </LinearLayout>-->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        android:background="@android:color/white">
-
-        <ImageView
-            android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_prev_button" />
-
-        <ImageView
-            android:id="@+id/play_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_play_button" />
-
-        <ImageView
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_next_button" />
-
-        <SeekBar
-            android:id="@+id/seekbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:max="100"
-            android:progress="0"
-            android:progressDrawable="@drawable/seekbar_progress"
-            android:thumb="@drawable/seekbar_thumb" />
-
-        <ImageView
-            android:id="@+id/volume_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_volume_button" />
-
-    </LinearLayout>
+        app:menu="@menu/menu_navigation"
+        android:background="@color/green"
+        app:itemTextColor="@color/color_navigation"
+        app:itemIconTint="@color/color_navigation"/>
 
 </LinearLayout>
