--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -25,15 +25,18 @@
             android:layout_height="match_parent"
             android:text="Mới nhất"/>
     </LinearLayout>
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/id_RCVAlbum"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_below="@id/filter_album"
-       android:layout_margin="5dp"
-       android:orientation="vertical"
-       android:padding="4dp"
-       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-       tools:listitem="@layout/layout_album_items"
-       />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/id_RCVAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/filter_album"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical"
+        android:padding="4dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/layout_album_items" />
 </RelativeLayout>
