--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -24,6 +24,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Mới nhất"/>
+
+        <Button
+            android:id="@+id/btn_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1"
+            android:text="Upload Song"
+            />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
