--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent">
     
     <ImageView
-        android:id="@+id/img_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:id="@+id/img_photo"/>
 
 </LinearLayout>
