--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="green">#2E4F4F</color>
     <color name="yellow">#FFBF00</color>
     <color name="gray">#D6E4E5</color>
+    <color name="darkPrimary">#404040</color>
 </resources>
