Update model, Fix module add new album

--- a/app/src/main/res/layout/activity_album_details.xml
+++ b/app/src/main/res/layout/activity_album_details.xml
@@ -4,21 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlbumDetailsActivity"
-    android:background="@color/darkPrimary">
-    
+    android:background="@color/darkPrimary"
+    android:gravity="center"
+    android:padding="10dp"
+    tools:context=".AlbumDetailsActivity">
+
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
         android:id="@+id/img_album_photo"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:layout_width="402dp"
+        android:layout_height="199dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/tv_album_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img_album_photo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="#4E4444"
+        android:text="TextView"
+        android:textColor="#FEFEFE"
+        android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/tv_album_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_album_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="#4E4444"
+        android:text="TextView"
+        android:textColor="#FEFEFE"
+        android:textSize="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/rcv_songs"
-        android:layout_below="@id/img_album_photo"/>
+        android:layout_width="match_parent"
+        android:layout_height="403dp"
+        android:layout_below="@id/tv_album_description"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="10dp" />
+
 
 </RelativeLayout>
