--- a/app/src/main/res/layout/layout_song_item_search.xml
+++ b/app/src/main/res/layout/layout_song_item_search.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#41644A">
     <ImageView
         android:id="@+id/imgnhac"
         android:layout_width="65dp"
@@ -29,7 +29,7 @@
         android:layout_marginTop="16dp"
         android:maxWidth="300dp"
         android:text="Tên Bài Hát"
-        android:textColor="@color/black"
+        android:textColor="#F5F5F5"
         android:textSize="21sp"
         android:maxLines="1"
         app:layout_constraintStart_toEndOf="@+id/imgnhac"
@@ -44,7 +44,7 @@
 
         android:maxWidth="250dp"
         android:text="Singer"
-        android:textColor="#2E2929"
+        android:textColor="#E8E2E2"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imgnhac"
         app:layout_constraintTop_toBottomOf="@+id/txttennhac" />
@@ -57,7 +57,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/iconlove"
+        android:background="@drawable/icon_love"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
