--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -2,10 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-    android:id="@+id/searchId"
-    android:icon= "@drawable/music_search"
-    android:title="Search"
-    app:actionViewClass="androidx.appcompat.widget.SearchView"
-    app:showAsAction="always"/>
+        android:id="@+id/searchId"
+        android:icon= "@drawable/music_search"
+        android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always"
+        />
 
 </menu>
