--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -1,81 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/editText_title"
+    android:layout_width="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Title" />
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editText_artist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Artist" />
+        <EditText
+            android:id="@+id/editText_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Title" />
 
-    <Button
-        android:id="@+id/button_select_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Select Image File" />
+        <EditText
+            android:id="@+id/editText_artist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Artist" />
 
-
-    <ImageView
-        android:id="@+id/imageView_selected_file"
-        android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:layout_marginTop="16dp"
-         />
-    <ProgressBar
-        android:id="@+id/progress_bar_image"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_upload"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp" />
-
-    <Button
-        android:id="@+id/button_select_file"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Select Audio File" />
-
-    <TextView
-        android:id="@+id/tv_song_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:hint="Song Information"
-        android:gravity="center"
-        android:textSize="24sp" />
+        <Button
+            android:id="@+id/button_select_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select Image File" />
 
 
+        <ImageView
+            android:id="@+id/imageView_selected_file"
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:layout_marginTop="10dp"
+            />
+        <ProgressBar
+            android:id="@+id/progress_bar_image"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_upload"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/image_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_above="@id/progress_bar"-->
-<!--        android:layout_below="@id/imageView_selected_file"-->
-<!--        android:layout_marginTop="16dp" />-->
+        <Button
+            android:id="@+id/button_select_file"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select Audio File" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_upload"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp" />
-    <Button
-        android:id="@+id/button_upload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Upload" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_song_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:hint="Song Information"
+            android:gravity="center"
+            android:textSize="24sp" />
+
+
+
+        <!--    <ImageView-->
+        <!--        android:id="@+id/image_view"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="match_parent"-->
+        <!--        android:layout_above="@id/progress_bar"-->
+        <!--        android:layout_below="@id/imageView_selected_file"-->
+        <!--        android:layout_marginTop="16dp" />-->
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_upload"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp" />
+        <Button
+            android:id="@+id/button_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Upload" />
+    </LinearLayout>
+
+
+</ScrollView>
