--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -131,7 +131,7 @@
         android:layout_height="match_parent">
 
         <ImageButton
-            android:id="@+id/imageButtontron"
+            android:id="@+id/imageButtonDownload"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
@@ -140,7 +140,7 @@
             android:background="@null"
             android:contentDescription="@string/random"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/baseline_shuffle_24" />
+            app:srcCompat="@drawable/baseline_download_24" />
 
         <ImageButton
             android:id="@+id/imageButtonpreview"
