hoàn thành tab home <fill list nhạc và phát nhạc>

--- a/app/src/main/res/layout/fragment_hotmusic.xml
+++ b/app/src/main/res/layout/fragment_hotmusic.xml
@@ -8,12 +8,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="10dp"
         android:id="@+id/recyclerviewhitsongs"
-        android:background="#41644A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp" />
+        android:layout_marginTop="0dp"
+        android:background="#41644A"
+        android:padding="10dp" />
 
 
 </LinearLayout>
