--- a/app/src/main/res/layout/activity_album_details.xml
+++ b/app/src/main/res/layout/activity_album_details.xml
@@ -10,7 +10,7 @@
     tools:context=".AlbumDetailsActivity">
 
     <ImageView
-        android:id="@+id/img_album_photo1"
+        android:id="@+id/img_album_photo"
         android:layout_width="402dp"
         android:layout_height="199dp"
         android:layout_alignParentStart="true"
@@ -18,10 +18,10 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/tv_album_name1"
+        android:id="@+id/tv_album_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_album_photo1"
+        android:layout_below="@id/img_album_photo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="#4E4444"
@@ -30,10 +30,10 @@
         android:textSize="18dp" />
 
     <TextView
-        android:id="@+id/tv_album_description1"
+        android:id="@+id/tv_album_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_album_name1"
+        android:layout_below="@id/tv_album_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="#4E4444"
@@ -42,10 +42,10 @@
         android:textSize="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_songs1"
+        android:id="@+id/rcv_songs"
         android:layout_width="match_parent"
         android:layout_height="403dp"
-        android:layout_below="@id/tv_album_description1"
+        android:layout_below="@id/tv_album_description"
         android:layout_marginTop="20dp"
         android:paddingBottom="10dp" />
 
