--- a/app/src/main/res/layout/fragment_album_detail.xml
+++ b/app/src/main/res/layout/fragment_album_detail.xml
@@ -15,7 +15,7 @@
 
         <!-- TODO: Update blank fragment layout -->
         <ImageView
-            android:id="@+id/img_album_photo"
+            android:id="@+id/img_album_photo1"
             android:layout_width="402dp"
             android:layout_height="199dp"
             android:layout_alignParentStart="true"
@@ -23,7 +23,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/tv_album_name"
+            android:id="@+id/tv_album_name1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/img_album_photo"
@@ -35,7 +35,7 @@
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/tv_album_description"
+            android:id="@+id/tv_album_description1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_album_name"
@@ -47,7 +47,7 @@
             android:textSize="16dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_songs"
+            android:id="@+id/rcv_songs1"
             android:layout_width="match_parent"
             android:layout_height="403dp"
             android:layout_below="@id/tv_album_description"
